--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
     "@capacitor/android": "^1.5.1",
     "@capacitor/core": "1.5.1",
     "@capacitor/ios": "^1.5.1",
+    "@ionic-native/barcode-scanner": "^5.23.0",
+    "@ionic-native/core": "^5.23.0",
     "@ionic/react": "^5.0.0",
     "@ionic/react-router": "^5.0.0",
+    "@stripe/react-stripe-js": "^1.1.2",
+    "@stripe/stripe-js": "^1.3.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^8.0.3",
@@ -22,7 +26,6 @@
     "react-dom": "^16.12.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0",
     "typescript": "3.7.4"
   },
   "scripts": {
@@ -47,7 +50,8 @@
     ]
   },
   "devDependencies": {
-    "@capacitor/cli": "1.5.1"
+    "@capacitor/cli": "1.5.1",
+    "react-scripts": "3.4.0"
   },
   "description": "An Ionic project"
 }
