--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.12.0",
+    "react-iframe": "^1.8.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "typescript": "3.7.4"
