project data in main page

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -20,6 +20,7 @@
     "jsx": "react",
     "noImplicitAny" : false,
     "strictNullChecks": false,
+    "downlevelIteration" : true,
   },
   "include": [
     "src"
