--- a/client/package.json
+++ b/client/package.json
@@ -22,11 +22,14 @@
     "@types/react-router": "^5.1.4",
     "@types/react-router-dom": "^5.1.3",
     "bootstrap": "^4.4.1",
+    "d3": "^5.16.0",
     "ionicons": "^5.0.0",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.1",
+    "react-chart-histogram": "^0.2.4",
     "react-dom": "^16.12.0",
     "react-iframe": "^1.8.0",
+    "react-native-svg": "^12.1.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "typescript": "3.7.4"
